Bug 1843267: Don't dispatch DOMLinkAdded and DOMLinkRemoved for elements disconnected from the DOM. r=emilio

This change makes these events behave the same as DOMLinkChanged which was changed
in bug 1083895.

Differential Revision: https://phabricator.services.mozilla.com/D189365