browser/base/content/test/favicons/browser_favicon_change_not_in_document.js
@@ -4,6 +4,19 @@ const TEST_ROOT =
   "http://mochi.test:8888/browser/browser/base/content/test/favicons/";
 const TEST_URL = TEST_ROOT + "file_favicon_change_not_in_document.html";
 
+// Runs the given task in the document of the browser.
+function runInDoc(browser, task) {
+  return ContentTask.spawn(browser, `(${task.toString()})();`, scriptStr => {
+    let script = content.document.createElement("script");
+    script.textContent = scriptStr;
+    content.document.body.appendChild(script);
+
+    // Link events are dispatched asynchronously so allow the event loop to run
+    // to ensure that any events are actually dispatched before returning.
+    return new Promise(resolve => content.setTimeout(resolve, 0));
+  });
+}
+
 /*
  * This test tests a link element won't fire DOMLinkChanged/DOMLinkAdded unless
  * it is added to the DOM. See more details in bug 1083895.
@@ -50,6 +63,86 @@ add_task(async function () {
     "Should fire the correct number of DOMLinkAdded event."
   );
   is(domLinkChangedFired, 0, "Should not fire any DOMLinkChanged event.");
+
+  gBrowser.removeTab(extraTab);
+});
+
+/*
+ * This verifies that creating and manipulating link elements inside document
+ * fragments doesn't trigger the link events.
+ */
+add_task(async function () {
+  let extraTab = (gBrowser.selectedTab = BrowserTestUtils.addTab(
+    gBrowser,
+    TEST_ROOT
+  ));
+  let browser = extraTab.linkedBrowser;
+
+  let domLinkAddedFired = 0;
+  let domLinkChangedFired = 0;
+  const linkAddedHandler = event => domLinkAddedFired++;
+  const linkChangedhandler = event => domLinkChangedFired++;
+  BrowserTestUtils.addContentEventListener(
+    browser,
+    "DOMLinkAdded",
+    linkAddedHandler
+  );
+  BrowserTestUtils.addContentEventListener(
+    browser,
+    "DOMLinkChanged",
+    linkChangedhandler
+  );
+
+  BrowserTestUtils.startLoadingURIString(browser, TEST_ROOT + "blank.html");
+  await BrowserTestUtils.browserLoaded(browser);
+
+  is(domLinkAddedFired, 0, "Should have been no link add events");
+  is(domLinkChangedFired, 0, "Should have been no link change events");
+
+  await runInDoc(browser, () => {
+    let fragment = document
+      .createRange()
+      .createContextualFragment(
+        '<link type="image/ico" href="file_generic_favicon.ico" rel="icon">'
+      );
+    fragment.firstElementChild.setAttribute("type", "image/png");
+  });
+
+  is(domLinkAddedFired, 0, "Should have been no link add events");
+  is(domLinkChangedFired, 0, "Should have been no link change events");
+
+  await runInDoc(browser, () => {
+    let fragment = document.createDocumentFragment();
+    let link = document.createElement("link");
+    link.setAttribute("href", "file_generic_favicon.ico");
+    link.setAttribute("rel", "icon");
+    link.setAttribute("type", "image/ico");
+
+    fragment.appendChild(link);
+    link.setAttribute("type", "image/png");
+  });
+
+  is(domLinkAddedFired, 0, "Should have been no link add events");
+  is(domLinkChangedFired, 0, "Should have been no link change events");
+
+  let expectedFavicon = TEST_ROOT + "file_generic_favicon.ico";
+  let faviconPromise = waitForFavicon(browser, expectedFavicon);
+
+  // Moving an element from the fragment into the DOM should trigger the add
+  // events and start favicon loading.
+  await runInDoc(browser, () => {
+    let fragment = document
+      .createRange()
+      .createContextualFragment(
+        '<link type="image/ico" href="file_generic_favicon.ico" rel="icon">'
+      );
+    document.head.appendChild(fragment);
+  });
+
+  is(domLinkAddedFired, 1, "Should have been one link add events");
+  is(domLinkChangedFired, 0, "Should have been no link change events");
+
+  await faviconPromise;
 
   gBrowser.removeTab(extraTab);
 });
